# ciarcpp

./: CMakeLists.txt  README.md
include/ciarcpp/: api.hpp  errors.hpp  result.hpp  types.hpp
include/ciarcpp/errors/: ciarc_logic_error.hpp  ciarcpp_internal_error.hpp  connection_error.hpp
src/: CMakeLists.txt
src/api/: CMakeLists.txt  api.cpp
src/json_parse/: CMakeLists.txt
src/json_parse/include/ciarcpp/json_parse/: parse.hpp  serialize.hpp
src/json_parse/src/: enum_metas.hpp  get_type_name.hpp  json_parsers.hpp  json_serializers.hpp  parse.cpp  parse_datetime.hpp  parse_exception.hpp  serialize.cpp
tests/: CMakeLists.txt
tests/src/: json_parse_tests.cpp
